# stalcraft-legacy-lang

./: README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/: artefacts.csv
data/anomalies/: gloomycore.lang
data/artefacts/: gloomycore.lang  stalker.lang
data/fractions/: gloomycore.lang  stalker.lang
data/items/: stalker.lang
data/locations/: stalker.lang
data/mobs/: gloomycore.lang
data/names/: gloomycore.lang  stalker.lang
scripts/: build.py
src/: __main__.py  ask.py  assets_validator.py  consts.py  enums.py  localization.py  resources.py  utils.py
